--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
         <!---Header-->
         <header>
             <a href="/"class="logo">Wedding</a>
-            <a href="#"class="menu" onclick="toggleMenu();">
+            <!-- <a href="#"class="menu" onclick="toggleMenu();">
                 <ion-icon class="open"name="menu-outline"></ion-icon>
                 <ion-icon class="close"name="close-outline"></ion-icon>
-            </a>
+            </a> -->
             <ul class="nav">
            <li><a class="nav-btn activate"href="/" onclick="resetHeader();">
             <ion-icon name="home-outline"></ion-icon>
@@ -48,7 +48,7 @@
         <div class="banner container-fluid">
             <div class="bg-slide slide-1 active">
                 <div class="content">
-                    <h1>Wedding</h1>
+                    <h1>Ceremony</h1>
                     <p>
                         Celebrate love in a breathtaking fusion of elegance and whimsy with our bespoke weddings. 
                          we specialize in crafting unforgettable moments tailored to your unique love story. 
@@ -57,18 +57,18 @@
                     </p>
                 </div>
                 <div class="circle bg">
-                    <img src="./images/wedding-1.jpg" alt=""/>
+                    <img src="images/wedding 5.jpg" alt=""/>
                     <div class="circle large">
-                        <img src="./images/wedding-1.jpg" alt=""/>
+                        <img src="images/wedding 5.jpg" alt=""/>
                         <div class="circle small">
-                            <img src="./images/wedding-1.jpg" alt=""/>
+                            <img src="images/wedding 5.jpg" alt=""/>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="bg-slide slide-2">
                 <div class="content">
-                    <h1>Ceremony</h1>
+                    <h1>mehandi</h1>
                     <p>
                         Celebrate love in a breathtaking fusion of elegance and whimsy with our bespoke weddings. 
                          we specialize in crafting unforgettable moments tailored to your unique love story. 
@@ -88,7 +88,47 @@
             </div>
             <div class="bg-slide slide-3">
                 <div class="content">
-                    <h1>honeymoon</h1>
+                    <h1>Haladi</h1>
+                    <p>
+                        Celebrate love in a breathtaking fusion of elegance and whimsy with our bespoke weddings. 
+                         we specialize in crafting unforgettable moments tailored to your unique love story. 
+                         Picture exchanging vows under a canopy of twinkling lights, surrounded by lush gardens and the soft melody of a string quartet. 
+                         Whether you dream of a grand affair or an intimate gathering, our team is dedicated to turning your vision.
+                    </p>
+                </div>
+                <div class="circle bg">
+                    <img src="./images/wedding-2.jpg" alt=""/>
+                    <div class="circle large">
+                        <img src="./images/wedding-2.jpg" alt=""/>
+                        <div class="circle small">
+                            <img src="./images/wedding-2.jpg" alt=""/>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="bg-slide slide-4">
+                <div class="content">
+                    <h1>Wedding</h1>
+                    <p>
+                        Celebrate love in a breathtaking fusion of elegance and whimsy with our bespoke weddings. 
+                         we specialize in crafting unforgettable moments tailored to your unique love story. 
+                         Picture exchanging vows under a canopy of twinkling lights, surrounded by lush gardens and the soft melody of a string quartet. 
+                         Whether you dream of a grand affair or an intimate gathering, our team is dedicated to turning your vision.
+                    </p>
+                </div>
+                <div class="circle bg">
+                    <img src="./images/wedding-2.jpg" alt=""/>
+                    <div class="circle large">
+                        <img src="./images/wedding-2.jpg" alt=""/>
+                        <div class="circle small">
+                            <img src="./images/wedding-2.jpg" alt=""/>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="bg-slide slide-5">
+                <div class="content">
+                    <h1>reception</h1>
                     <p>
                         Celebrate love in a breathtaking fusion of elegance and whimsy with our bespoke weddings. 
                          we specialize in crafting unforgettable moments tailored to your unique love story. 
@@ -110,6 +150,8 @@
                 <li><a class="slide-btn active" data-target="slide-1">1</a></li>
                 <li><a class="slide-btn"data-target="slide-2">2</a></li>
                 <li><a class="slide-btn"data-target="slide-3">3</a></li>
+                <li><a class="slide-btn"data-target="slide-4">4</a></li>
+                <li><a class="slide-btn"data-target="slide-5">5</a></li>
             </ul>
             <div class="share">
                 <p>share</p>
@@ -181,6 +223,12 @@
                 <div class="row">
                     <h1>Our Services</h1>
                 </div>
+                <ul class="bar">
+                    <li>All</li>
+                    <li >Venue</li>
+                    <li >vendors</li>
+                    <li >packages</li>
+                </ul>
                 <div class="row d-flex justify-content-center align-items-center">
                 <div class="row">
                     <div class="col-lg-4">
