to add gallery , venue , vendor

--- a/index.html
+++ b/index.html
@@ -223,12 +223,13 @@
                 <div class="row">
                     <h1>Our Services</h1>
                 </div>
-                <ul class="bar">
-                    <li>All</li>
-                    <li >Venue</li>
-                    <li >vendors</li>
-                    <li >packages</li>
-                </ul>
+                <nav class="nav-container">
+                    <ul class="bar">
+                        <li><a href="gallery.html">All</a></li>
+                        <li><a href="venue.html">Venue</a></li>
+                        <li><a href="vendors.html">Vendors</a></li>
+                    </ul>
+                </nav>
                 <div class="row d-flex justify-content-center align-items-center">
                 <div class="row">
                     <div class="col-lg-4">
